--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Antes do Fim</title>
   <script src="bootstrap.bundle.min.js"></script>
   <link rel="stylesheet" href="bootstrap.min.css">
   <link rel="stylesheet" href="style.css">
@@ -44,7 +44,7 @@
   </section>
   <section class="container-fluid section-conto section-bg p-4">
     <div class="">
-      <h1 class="display-4">Contos</h1>
+      <h1 class="display-4">Objetivo do projeto</h1>
     </div>
     <div class="row">
       <div class="col-lg-7 p-5">
