--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
   <meta charset="UTF-8">
@@ -44,11 +44,16 @@
   </section>
   <section class="container-fluid section-conto section-bg p-4">
     <div class="">
-      <h1 class="display-4">Objetivo do projeto</h1>
+      <h1 class="display-4">Conto Introdutório</h1>
     </div>
     <div class="row">
       <div class="col-lg-7 p-5">
-        <p class="abnt-default">Este trabalho tem como objetivo a criação de contos que estejam correlacionando a teoria da disciplina "Comportamento do Consumidor" ofertado pela Universidade Federal de Uberlândia - UFU, no curso de graduação de Gestão da Informação. Esperamos atingir a comunidade externa através das nossas criações que serão postadas aqui.</p>
+        <p class="abnt-default">Quando pequena, meu jovem, vivia em Ravenwood, uma pequena cidade onde segredos sibilavam nas sombras e ventos noturnos traziam sussurros sem palavras, havia uma casa abandonada no final da rua dos meus amigos. Todos chamavam-lhe Casa das Marés. Falávamos de um espírito antigo, que não podia descansar por algum erro de sua vida passada ou, alternativamente, sua morte ao mesmo tempo, cujo choro de lamento podia ser ouvido entre as paredes de pedra e cujos passos podiam ser ouvidos ecoando pelos corredores vazios. Mas não tenha medo meu filho, meu grupo de amigos eram de jovens destemidos, cuja curiosidade era igualada apenas pela nossa atitude despojada em relação à oração, ouvimos o suficiente e decidimos descobrir o que realmente estava acontecendo na Casa das Marés. 
+Entre nós, havia eu, Sarah, óbvio - que eu diria que naquela época era muito corajosa e adorava me aventurar em lugares sombrios que a maioria preferia evitar, Jake - o estereótipo atlético que nunca parecia pensar antes de agir, sempre pronto para mergulhar de cabeça em qualquer situação, Alex - uma mulher cuja inteligência supera a de muitos do grupo, sempre analisando a situação ao redor para dar as melhores alternativas de superar os desafios existentes, Mike - com seu jeito único e seu talento para aliviar os climas tensos das explorações que o grupo fazia, fazendo com que todos pudessem rir da situação na qual estavam acometidos, Ellen -  se destacava com seus cabelos loiros, uma mulher muito esbelta que além de ser extravagante não podia evitar notar como suas decisões muitas vezes pareciam um pouco…desajeitadas. Naquela noite, sob as estrelas, embalada pelo manto escuro do céu estrelado, me reuni com meus amigos diante da moradia imponente. Com janelas quebradas e tábuas soltas nas portas, era um convite sem poder ser feito ao mistério que ela abrigava. As lanternas tremeluziam enquanto nossos corações pulsavam descompassadamente, o grupo finalmente adentrou na Casa das Marés. Lembro-me que o cheiro estava impregnado no ar, era o cheiro característico de mofo, e o som dos passos foram desfeitos por sussurros. Até as sombras eram independentes, dançando em diversas melodias ao som dos corredores entrelaçados como uma vasta teia de aranha. 
+Eu estava guiando o grupo pelo escuro por uma força inaudível, ao qual era atraída apenas por um instinto de certo. Estava certo que a cada segmento a se aprofundar pela casa tomada pelas conversas que me eram bombardeadas enquanto seguia pelo caminho. Os assuntos pairavam ainda mais fortes e perturbadores, não como se a própria casa abandonada fosse, porém como se as outras casas estivessem também largadas. De repente, um grito perfurou a noite, fazendo com que eles se desabassem. Comecei a correr e a gritar descompassadamente, meu coração pulsava pesadamente, até que cheguei em meu amigo, Jake.
+Com mãos trêmulas, Jake havia apontado para dentro do quarto, onde uma figura pálida estava parada, imersa na penumbra. Era uma mulher de vestes antigas, cujos olhos sem vida pareciam perfurar a alma de quem a encarava. Uma onda de arrepio percorreu a minha espinha, e quando percebi que a mulher não era uma simples aparição, mas sim algo muito mais sombrio e sinistro. Num instante de coragem, avancei em direção à figura, determinada a descobrir a verdade por trás da sua presença naquela casa abandonada. 
+Mas antes que eu pudesse alcançá-la, a figura desapareceu num piscar de olhos, deixando para trás apenas um eco melancólico. Com os corações acelerados e os mistérios da Casa das Marés ainda sem solução, meus amigos e eu escapamos daquele local assustador, jurando nunca mais retornar. Mesmo após o amanhecer e a cidade retomar suas atividades diárias, o enigma da Casa das Marés persistiu assombrando os sonhos daqueles que se atreveram a explorá-lo.
+</p>
       </div>
       <div class="col-lg-5 p-5">
         <img src="img/conto1.jpg" class="conto1-img rounded" alt="">
