--- a/conto1.html
+++ b/conto1.html
@@ -17,7 +17,7 @@
       <div><img class="rounded float-start logo" src="img/logo-fagen-preta.png" alt="" srcset=""></div>
       <ul class="nav justify-content-end ">
         <li class="nav-item">
-          <a class="nav-link active text-dark" aria-current="page" href="#">Sobre</a>
+          <a class="nav-link active text-dark" aria-current="page" href="index.html">Sobre</a>
         </li>
         <li class="nav-item dropdown ">
           <a class="nav-link dropdown-toggle text-dark" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Contos</a>
