--- a/conto1.html
+++ b/conto1.html
@@ -51,7 +51,7 @@
         <p class="abnt-default">Após a primeira visita à Casa das Marés, Sarah e seus amigos se sentiam incapazes de deixar para trás o mistério daquela figura fantasmagórica. A curiosidade crescia dia após dia, alimentada por conversas sussurradas nos corredores da escola e nas esquinas da pequena cidade de Ravenwood. Até que, em um certo dia, decidiram se reunir mais uma vez para discutir o que realmente significava voltar àquele lugar. A sensação de que havia algo não resolvido permeava o ar, como se aquela casa e seus segredos os chamassem de volta.</p>
             <p class="abnt-default">"Precisamos entender por que queremos voltar lá", disse Alex, com a expressão concentrada. "Não é só por causa do medo ou da adrenalina. Há algo mais profundo que nos atrai para aquela casa. Estamos todos respondendo a diferentes motivações e influências, e é importante saber quais são."</p>
             <p class="abnt-default">"Você está falando como se estivéssemos em um daqueles capítulos do seu livro de comportamento do consumidor", brincou Mike, mas sua voz traía uma leve inquietação. "Qual é mesmo o capítulo que fala sobre o que nos motiva a fazer certas escolhas?"</p>
-            <p class="abnt-default">"Reconhecimento da Necessidade e Busca", respondeu Alex, ajustando os óculos. "Capítulo 4, se não me engano. Cada um de nós tem valores e objetivos pessoais que influenciam nosso comportamento. Por exemplo, Jake, você foi o primeiro a sugerir que voltássemos. Por quê?"(1)</p>
+            <p class="abnt-default">"Reconhecimento da Necessidade", respondeu Alex, ajustando os óculos. "Capítulo 4, se não me engano. Cada um de nós tem valores e objetivos pessoais que influenciam nosso comportamento. Por exemplo, Jake, você foi o primeiro a sugerir que voltássemos. Por quê?"(1)</p>
             <p class="abnt-default">Jake hesitou, olhando fixamente para as mãos. "Não sei bem. Acho que, para mim, é mais uma questão de provar que não tenho medo. E... talvez um pouco de querer resolver o mistério. O desconhecido sempre me atrai. Sinto que há algo que precisamos descobrir, que precisa ser desvendado, sabe?"</p>
             <p class="abnt-default">"Isso é o que chamamos de motivação intrínseca," explicou Alex, sorrindo. "Sua vontade de enfrentar o medo e buscar respostas é guiada por um desejo interno de realização pessoal. É um valor que você tem e que molda suas decisões. E é interessante como isso está ligado a uma busca por identidade e propósito, algo que muitos de nós sentimos de formas diferentes."</p>
             <p class="abnt-default">"E eu?" perguntou Ellen, mordendo o lábio inferior. "Acho que só quero mesmo saber se tudo o que vimos foi real ou se nossa mente nos pregou uma peça. Estou cansada de ficar imaginando o que aconteceu de verdade."</p>
@@ -87,11 +87,11 @@
             <p class="abnt-default">Enquanto o grupo deixava a praça, sentiram uma estranha leveza, como se um peso invisível tivesse sido levantado. Naquela noite, de volta à Casa das Marés, encontraram o quadro vazio. A figura da mulher desaparecera, como se finalmente tivesse encontrado a paz que tanto procurava.</p>
             <p class="abnt-default">"Ela finalmente descansou," disse Ellen, com um sorriso triste e um suspiro de alívio."</p>
             <p class="abnt-default">A Casa das Marés, antes um símbolo de medo e mistério, tornou-se uma lembrança do poder das percepções e das narrativas, tanto para o bem quanto para o mal. E para Sarah e seus amigos, foi uma lição inesquecível sobre como nossas escolhas e motivações nos moldam, tanto quanto moldam o mundo ao nosso redor. O mistério da Casa das Marés não era apenas sobre uma figura fantasmagórica, mas sobre como a verdade e a empatia podem transformar a maneira como vemos o mundo.</p>
-            <p class="abnt-default">(1) Cap 4 - Busca pag. 110 </p>
-            <p class="abnt-default">(2) Cap 3 - Variáveis que influenciam o Processo de Decisão pag. 87</p>
-            <p class="abnt-default">(3) Cap 6 -  Experiências de Consumo pag. 173</p>
-            <p class="abnt-default">(4) Cap 5 - Recurso Cognitivo pag. 158 </p>
-            <p class="abnt-default">(5) Cap 6 - Normas e Rituais de Consumo pag 177</p>
+            <p class="abnt-default">(1) Cap 4 - Reconhecimento da Necessidade pag. 104, Primeiro Parágrafo</p>
+            <p class="abnt-default">(2) Cap 3 - Influências Ambientais pag. 89, Situação</p>
+            <p class="abnt-default">(3) Cap 6 -  Experiências de Consumo pag. 173, Como Você Sente?, Sexto Parágrafo</p>
+            <p class="abnt-default">(4) Cap 5 - Recursos Cognitivos pag. 158, Segundo Parágrafo</p>
+            <p class="abnt-default">(5) Cap 6 - Normas e Rituais de Consumo pag 177, Primeiro Parágrafo</p>
             </p>
       </div>
       <div class="col-lg-5 p-5">
