--- a/conto2.html
+++ b/conto2.html
@@ -92,13 +92,13 @@
           <p class="abnt-default">E então, algo extraordinário aconteceu. O quadro, antes apenas uma pintura, começou a se mover. A mulher no retrato sorriu levemente, como se finalmente tivesse encontrado paz na presença daqueles que estavam dispostos a enfrentá-la e compreendê-la. Ela sussurrou algo que parecia ser um agradecimento, e o grupo soube que, de alguma forma, haviam ajudado a libertá-la de sua prisão.</p>
           <p class="abnt-default">O grupo saiu da Casa das Marés com uma sensação de alívio e vitória. Não apenas haviam enfrentado seus medos, mas também resolveram o mistério que assombrava Ravenwood há tanto tempo. A Casa das Marés, que uma vez representou terror e incerteza, agora simboliza coragem, determinação e o poder de confrontar as próprias crenças e influências sociais.</p>
           <p class="abnt-default">Eles entenderam que, assim como consumidores leais, foram fiéis à sua busca por respostas e não desistiram até obter a verdade. Cada passo que deram dentro daquela casa os moldou, transformando seus medos em força e seus desafios em aprendizado. E essa experiência os moldou para sempre, deixando uma marca profunda em suas vidas e na história de Ravenwood, uma lição de que enfrentar o desconhecido é a única maneira de transformar o medo em compreensão — mesmo que isso signifique desafiar aqueles que amamos e mantê-los no escuro por um bem maior.</p>
-          <p class="abnt-default">(1) A Necessidade de Informação, Capítulo 8, página 252, Oitavo Parágrafo </p>
-          <p class="abnt-default">(2) Teoría Psicanalítica, Capítulo 7, página 221, Segundo Parágrafo </p>
-          <p class="abnt-default">(3) O Papel das Crenças na Formação das Atitudes, Capítulo 10, página 302, Quinto Parágrafo </p>
-          <p class="abnt-default">(4) Conhecimento dos Atributos e Associações do Produto, Capítulo 9, página 272, Segundo Parágrafo </p>
-          <p class="abnt-default">(5) Implicações da Mudança de Atitude para Modelos Multiatributo de Atitudes, Capítulo 10, página 314, Quinto Parágrafo </p>
-          <p class="abnt-default">(6) As Atitudes dos Consumidores, Capítulo 10, página 300, Segundo Parágrafo </p>
-          <p class="abnt-default">(7) Valores e Processo de Decisão do Consumidor, Capítulo 7, página 226, Segundo Parágrafo </p>
+          <p class="abnt-default">(1) A Necessidade de Informação, Capítulo 8, pag. 252, Oitavo Parágrafo </p>
+          <p class="abnt-default">(2) Teoría Psicanalítica, Capítulo 7, pag. 221, Segundo Parágrafo </p>
+          <p class="abnt-default">(3) O Papel das Crenças na Formação das Atitudes, Capítulo 10, pag. 302, Quinto Parágrafo </p>
+          <p class="abnt-default">(4) Conhecimento dos Atributos e Associações do Produto, Capítulo 9, pag. 272, Segundo Parágrafo </p>
+          <p class="abnt-default">(5) Implicações da Mudança de Atitude para Modelos Multiatributo de Atitudes, Capítulo 10, pag. 314, Quinto Parágrafo </p>
+          <p class="abnt-default">(6) As Atitudes dos Consumidores, Capítulo 10, pag. 300, Segundo Parágrafo </p>
+          <p class="abnt-default">(7) Valores e Processo de Decisão do Consumidor, Capítulo 7, pag. 226, Segundo Parágrafo </p>
       </div>
       <div class="col-lg-5 p-5">
         <img src="img/conto1.jpg" class="conto1-img rounded" alt="">
