--- a/conto1.html
+++ b/conto1.html
@@ -87,11 +87,11 @@
             <p class="abnt-default">Enquanto o grupo deixava a praça, sentiram uma estranha leveza, como se um peso invisível tivesse sido levantado. Naquela noite, de volta à Casa das Marés, encontraram o quadro vazio. A figura da mulher desaparecera, como se finalmente tivesse encontrado a paz que tanto procurava.</p>
             <p class="abnt-default">"Ela finalmente descansou," disse Ellen, com um sorriso triste e um suspiro de alívio."</p>
             <p class="abnt-default">A Casa das Marés, antes um símbolo de medo e mistério, tornou-se uma lembrança do poder das percepções e das narrativas, tanto para o bem quanto para o mal. E para Sarah e seus amigos, foi uma lição inesquecível sobre como nossas escolhas e motivações nos moldam, tanto quanto moldam o mundo ao nosso redor. O mistério da Casa das Marés não era apenas sobre uma figura fantasmagórica, mas sobre como a verdade e a empatia podem transformar a maneira como vemos o mundo.</p>
-            <p class="abnt-default">(1) Cap 4 - Reconhecimento da Necessidade pag. 104, Primeiro Parágrafo</p>
-            <p class="abnt-default">(2) Cap 3 - Influências Ambientais pag. 89, Situação</p>
-            <p class="abnt-default">(3) Cap 6 -  Experiências de Consumo pag. 173, Como Você Sente?, Sexto Parágrafo</p>
-            <p class="abnt-default">(4) Cap 5 - Recursos Cognitivos pag. 158, Segundo Parágrafo</p>
-            <p class="abnt-default">(5) Cap 6 - Normas e Rituais de Consumo pag 177, Primeiro Parágrafo</p>
+            <p class="abnt-default">(1) Reconhecimento da Necessidade, Capítulo 4 página 104, primeiro parágrafo</p>
+            <p class="abnt-default">(2) Influências Ambientais - Situação, Capítulo 3 página 89</p>
+            <p class="abnt-default">(3) Experiências de Consumo - Como Você Sente?, Capítulo 6 página 173, sexto parágrafo</p>
+            <p class="abnt-default">(4) Recursos Cognitivos, Capítulo 5 página 158, segundo parágrafo</p>
+            <p class="abnt-default">(5) Normas e Rituais de Consumo, Capítulo 6 página 177, primeiro parágrafo</p>
             </p>
       </div>
       <div class="col-lg-5 p-5">
